--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="index.html">home</a></li>
-                                        <li><a href="about.html">about</a></li>
+                                        <li><a href="about.html">about DEDQ</a></li>
                                         <li><a href="Recipes.html">Recipes</a></li>
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
